gcc/testsuite/rust/rustc/ui/parser/issues/issue-60075.rs
fn main() {}

trait T {
    fn qux() -> Option<usize> {
        let _ = if true {
        }); // { dg-error "" "" { target *-*-* } }
        Some(4)
    }

